--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -13,7 +13,7 @@ published : true
 # Theme Setting
 # Doc: https://gitpitch.com/docs/settings/theme
 #
-theme : simple
+theme :black
 
 #
 # Theme-Override Setting
