--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -19,20 +19,20 @@ theme :black
 # Theme-Override Setting
 # Doc: https://gitpitch.com/docs/settings/custom-theme
 #
-theme-override : template/css/PITCHME.css
+#theme-override : template/css/PITCHME.css
 
 #
 # Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : template/img/logo.png
+logo : template/img/frappe-logo.png
 logo-position : top-left
 
 #
 # Footnote Setting
 # Doc: https://gitpitch.com/docs/settings/footnote
 #
-footnote : "GitPitch - The Fastest Way From Idea To Presentation"
+#footnote : "GitPitch - The Fastest Way From Idea To Presentation"
 
 #
 # Highlight (Code) Setting
@@ -58,6 +58,6 @@ transition : none
 # Twitter Card Settings
 # Doc: https://gitpitch.com/docs/settings/twitter-card
 #
-title : "GitPitch - The Quickstart Template"
-description : "High-utility markdown slide templates for GitPitch presentation authors."
-thumbnail : https://gitpitch.com/gpimg/the-template-thumb.jpg
+# title : "GitPitch - The Quickstart Template"
+# description : "High-utility markdown slide templates for GitPitch presentation authors."
+# thumbnail : https://gitpitch.com/gpimg/the-template-thumb.jpg
