--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -21,11 +21,10 @@ theme :black
 #
 #theme-override : template/css/PITCHME.css
 
-#
-# Logo Setting
+#Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : assets/img/frappe-logo.png
+logo : assets/img/logo.png
 logo-position : top-left
 
 #
