--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -24,7 +24,7 @@ theme :black
 #Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : templates/img/logo.png
+logo : assets/img/logo.png
 logo-position : top-left
 
 #
