--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -12,8 +12,7 @@ published : true
 #
 # Theme Setting
 # Doc: https://gitpitch.com/docs/settings/theme
-#
-theme :black
+theme : sky
 
 #
 # Theme-Override Setting
@@ -24,7 +23,7 @@ theme :black
 #Logo Setting
 # https://gitpitch.com/docs/settings/logo
 #
-logo : assets/img/logo.png
+logo : templates/img/logo.png
 logo-position : top-left
 
 #
