Added support ppt

--- a/PITCHME.yaml
+++ b/PITCHME.yaml
@@ -36,7 +36,7 @@ logo-position : top-left
 # Highlight (Code) Setting
 # Doc: https://gitpitch.com/docs/settings/highlight
 #
-highlight : atom-one-dark
+#highlight : atom-one-dark
 
 #
 # Layout Setting
